# terra-server

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  OVERVIEW.md  README.md  pyproject.toml
backend/: alerts.py  auth.py  auth_camera.py  crypto.py  health.py  main.py  mqtt_bridge_main.py  offline_monitor.py  r2_client.py  supabase_client.py  webrtc_relay.py  webrtc_signaling.py
backend/mqtt/: bridge.py  dispatcher.py  handlers.py  registry.py  topics.py
backend/routers/: cameras.py  clips.py  devices.py  enclosures.py  webrtc.py
docs/: API.md  APP_INTEGRATION.md  APP_WEBRTC.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  ENV.md  FIRMWARE_AI_PROMPT.md  FIRMWARE_INTEGRATION.md  MQTT.md  OPERATIONS.md  firmware-integration-test.md
migrations/: 2026-05-26_camera_schema.sql  2026-05-26_initial_schema.sql
scripts/: sim_device.py  terra-mosquitto-register.sh  terra-mosquitto-sudoers
specs/: README.md  next-session.md  stage-a-mqtt-bridge.md  stage-b-device-pairing.md  stage-c-command-dispatch.md  stage-d-alerts.md  stage-e-timeseries-downsample.md  stage-f-camera-ingest.md  stage-g-live-streaming.md
tests/: conftest.py  test_auth_camera.py  test_cameras_api.py  test_clips_api.py  test_enclosures_api.py  test_mqtt_dispatcher.py  test_mqtt_handlers.py  test_mqtt_registry.py  test_r2_client.py  test_webrtc_api.py
web/: README.md  index.html
