[project]
name = "terra-server"
version = "0.1.0"
description = "ESP32 사육장 IoT 디바이스 ↔ Supabase 백엔드 (MQTT 브리지 + REST API)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "supabase>=2.28.3",
    "pyjwt[crypto]>=2.12.1",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.2.2",
    "bcrypt>=4.2.1",
    "boto3>=1.43.2",  # R2 (S3 호환) presigned URL 발급
]

[project.scripts]
# 프로세스 분리 (참조: petcam-lab 의 capture/vlm 분리 패턴)
# REST API:    `uv run uvicorn backend.main:app --host 0.0.0.0 --port 8000`
# MQTT 브리지: `uv run terra-bridge`
terra-bridge = "backend.mqtt_bridge_main:run"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
# 프로젝트 루트를 sys.path에 추가 → `from backend.xxx import ...` 가능
pythonpath = ["."]
testpaths = ["tests"]
